--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 /tsne_python/mnist2500_X.txt
 /tsne_python/test_labels.txt
 /tsne_python/testdata.txt
+/tsne_python/__pycache__
 
 movielens_ratings.txt
