--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 /ml-latest-small
 
 /spotlight
+/Animations
+/movie_metadata
+!/movie_metadata/poster
 
 /tsne_python/mnist2500_labels.txt
 /tsne_python/mnist2500_X.txt
 /tsne_python/test_labels.txt
 /tsne_python/testdata.txt
 /tsne_python/__pycache__
+/Graphs/single_user_3_steps.pptx
 
 movielens_ratings.txt
+
+/Project\ Info/Example_Study_Statements
